k8s/backend-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: backend-stripprefix
  namespace: cloudnative-dev
spec:
  stripPrefix:
    prefixes:
      - /dev/backend
