k8s/frontend-stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-stripprefix
  namespace: cloudnative-dev
spec:
  stripPrefix:
    prefixes:
      - /dev/frontend
